# custom-ubertooth

./: .dir-locals.el  .gitignore  CMakeLists.txt
boost_python_src/: first_test.cpp  ubertooth_py_ffi.cpp
custom_ubertooth/: CMakeLists.txt
custom_ubertooth/includes/: ubertooth_custom_callback.hpp  ubertooth_data_handler.hpp  ubertooth_extension.hpp
custom_ubertooth/src/: ubertooth_custom_callback.cpp  ubertooth_extension.cpp
modules/: practice.cmake
python_ffi_src/: ubertooth_py_ffi.cpp
ruby_ext_src/: Makefile  extconf.rb  main.rb  ubertooth_ext.cpp
src/: main.cpp
toolchains-for-cross-compile/: toolchains-armbian-clang.cmake  toolchains-armbian.cmake  toolchains-linux64-clang.cmake  toolchains-linux64.cmake  toolchains-raspbian.cmake
