cmake_minimum_required(VERSION 3.7.13)
set(CMAKE_BUILD_TYPE debug)
project(lesliebinbin)
set(CMAKE_BUILD_TYPE debug)
add_subdirectory(custom_ubertooth)
aux_source_directory(src ALL_SRCS)
include_directories(custom_ubertooth/includes)
add_executable(ubertooth-custom ${ALL_SRCS})
target_link_libraries(ubertooth-custom custom_ubertooth)
