cmake_minimum_required(VERSION 3.7.13)
set(CMAKE_BUILD_TYPE debug)

project(lesliebinbin)
set(CMAKE_BUILD_TYPE debug)
add_subdirectory(custom_ubertooth)
find_package(PythonLibs 3 REQUIRED)
find_package(Boost REQUIRED COMPONENTS program_options python)
aux_source_directory(src ALL_SRCS)
aux_source_directory(boost_python_src BOOST_PYTHON_ALL_SRCS)
include_directories(custom_ubertooth/includes ${BOOST_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
add_executable(ubertooth-custom ${ALL_SRCS})
set(CMAKE_SHARED_MODULE_PREFIX "")
add_library(ubertooth_ext MODULE ${BOOST_PYTHON_ALL_SRCS})
target_link_libraries(ubertooth-custom custom_ubertooth)
target_link_libraries(ubertooth_ext custom_ubertooth ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
