cmake_minimum_required(VERSION 3.7.13)
set(CMAKE_BUILD_TYPE debug)

project(lesliebinbin)
set(CMAKE_BUILD_TYPE debug)
add_subdirectory(custom_ubertooth)
add_subdirectory(pybind11)
find_package(PythonLibs 3 REQUIRED)
find_package(Boost REQUIRED COMPONENTS program_options python)
# find_package(nlohmann_json 3.2.0 REQUIRED)
find_package(Threads REQUIRED)
message("The data is :${CMAKE_THREAD_LIBS_INIT}")
aux_source_directory(src ALL_SRCS)
aux_source_directory(boost_python_src PYBIND11_SRCS)
message("the boost include is ${Boost_INCLUDE_DIRS}")
message("the python include is ${PYTHON_INCLUDE_DIRS}")
include_directories(custom_ubertooth/includes ${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
add_executable(ubertooth-custom ${ALL_SRCS})
pybind11_add_module(space_ubertooth MODULE ${PYBIND11_SRCS})
target_link_libraries(ubertooth-custom custom_ubertooth ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(space_ubertooth PRIVATE custom_ubertooth)
